=============================================================================
Dillo project
=============================================================================

dillo-2.2.1 [not released yet]
+- Configurable User-Agent HTTP header.
   Patch: Alexander Voigt, corvid
+- Include Accept header in HTTP queries.
 - Don't use obsolete png_check_sig().
 - Handle zero-width space.
 - Fix segfault closing window from WM.
   Patches: corvid

-----------------------------------------------------------------------------

dillo-2.2 [Feb 11, 2010]

+- Added keybindings for scrolling.
 - Help button and local help file.
   Patches: corvid, Jorge Arellano Cid
+- Add support for multiple class names in CSS.
 - Fix X11 coordinate overflows with huge borders.
 - Improve CSS font parsing.
 - Enable font face setting via <font> element.
 - Ignore XML comment markers in CSS.
 - Split up long lines in plain.cc to avoid X11 coordinate overflows.
 - Fix user agent style for nested <ul>.
 - Add support for CSS property list-style-position.
 - Support border-width: thin | medium | thick.
 - Fix CSS_SHORTHAND_DIRECTIONS case in CssParser.
 - Add quirk to reset font properties in tables (fixes e.g. gmail).
   Patches: Johannes Hofmann
+- Cleaned up system includes in dpid directory.
 - Fixed CustProgressBox() for systems without weak symbols.
 - Handle signed chars. Added dIsspace() and dIsalnum() to dlib.
 - Added a_Dpip_get_attr_l() to DPIP's API.
 - Changed the CCCs to build in one step (for both HTTP and DPI). This
   is simpler and helps to avoid race conditions.
 - Updated CCCwork.txt to the new scheme.
 - Fixed a bug with OPTION element (it was parsing entities twice).
 - Bugfix: remove the empty cache entry lingering after connection abort.
 - Switched capi to use dlib's Dlist instead of a_List_* methods.
 - Remove empty cache entries on Stop-button press and new link request!
 - Fixed URL unescaping in the datauri DPI.
 - Changed and reimplemented the DPI API.